Co-auth: farhan chandel, Sukhdeep Parmar border and overflow fix for market items

--- a/SFU-Venture/src/app/pages/main-market-display/main-market-display.component.scss
+++ b/SFU-Venture/src/app/pages/main-market-display/main-market-display.component.scss
@@ -120,8 +120,8 @@ user agent stylesheet html {
     // max-width: 100%;
     // max-height: 100%;
     height: 100%;
-    // width: 100%;
-    object-fit: cover;
+    width: 100%;
+    object-fit: contain;
 }
 
 .contact-section,
@@ -441,6 +441,7 @@ h5 {
 }
 
 .marketItemName {
+    max-height: 100%;
     height: fit-content;
     position: absolute;
     // top: 0;
@@ -453,7 +454,7 @@ h5 {
     margin-bottom: 0 !important;
     font-size: 12px !important;
     padding: 10px;
-    border-radius: 0 0 15px 15px;
+    border-radius: 15px 15px 15px 15px;
 }
 
 .marketItemName:hover {
